CSV and JSON files, NumPy, Pandas Part I

--- a/notebookRita.ipynb
+++ b/notebookRita.ipynb
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises Modules Files \n",
+    "Exercises Modules Files \n",
     "\n",
     "- 1/ What is a module?\n",
     "A file with .py extension that contains code programmed by others, that we can import into our code, without the need to program it by hand from the beggining.\n",
@@ -300,6 +300,79 @@
     "\n",
     "- 12/ What is the difference between a module and a script?\n",
     "A module is done to be imported by others into their codes, while a script is supposed to be executed directly."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises csv-json-files\n",
+    "\n",
+    "- 1/ What is a CSV file? Comma-separated values.\n",
+    "\n",
+    "- 2/ What are the advantages of the CSV format?\n",
+    "\n",
+    "- 3/ Why do we use the `csv` module to read and write\n",
+    "CSV files?\n",
+    "\n",
+    "- 4/ Are the data in a CSV file necessarily separated by\n",
+    "commas?\n",
+    "\n",
+    "- 5/ What is the *header* of a CSV file? Does it exist?\n",
+    "necessarily?\n",
+    "\n",
+    "- 6/ Why is the JSON format widely used in data manipulation?\n",
+    "data ?\n",
+    "\n",
+    "- 7/ What Python object does content in JSON format look like?\n",
+    "\n",
+    "- 8/ What types of Python objects can be converted to JSON?\n",
+    "\n",
+    "- 9/ What is the serialization of a Python object?\n",
+    "\n",
+    "- 10/ What is the main common point between CSV files and\n",
+    "JSON files?\n",
+    "\n",
+    "- 11/ Does a file with the extension .json necessarily contain\n",
+    "JSON?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fourth class - 17/02/2025"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercises Numerical calculations with NumPy\n",
+    "\n",
+    "- 1/ What are the main advantages of `NumPy`?\n",
+    "\n",
+    "- 2/ What are the two main characteristics of an *array*?\n",
+    "`NumPy`?\n",
+    "\n",
+    "- 3/ What happens if we try to define an *array* containing\n",
+    "objects of heterogeneous types?\n",
+    "\n",
+    "- 4/ What is the main method to create an *array*?\n",
+    "\n",
+    "- 5/ What information does the `shape` attribute of an array contain?\n",
+    "\n",
+    "- 6/ Can we add an element to an *array*? Delete an element?\n",
+    "\n",
+    "- 7/ What is a Boolean mask and what is it used for?\n",
+    "\n",
+    "- 8/ What is the *broadcasting* property?\n",
+    "\n",
+    "- 9/ What is the `axis` parameter of the mathematical functions of\n",
+    "`NumPy`?"
    ]
   }
  ],
