--- a/manipulation/csv-json-files/tutorial_en.ipynb
+++ b/manipulation/csv-json-files/tutorial_en.ipynb
@@ -1067,12 +1067,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "id": "7e535466",
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Test your answer in this cell"
+        "# Test your answer in this cell\n",
+        "import csv\n",
+        "from pathlib import Path\n",
+        "\n",
+        "old_file_path = Path.cwd() / \"nat2020.csv\"\n",
+        "with open(old_file_path, \"r\", encoding=\"utf-8\") as old_file: #whithout the encoding parameter, it was producing a UnicodeDecode Error\n",
+        "    reader = csv.reader(old_file, delimiter = ';')\n",
+        "    with open(\"nat2020_corr.csv\", \"w\") as updated_file:\n",
+        "        writer = csv.writer(updated_file)\n",
+        "        for row in reader:\n",
+        "            writer.writerow(row)\n",
+        "    \n"
       ]
     },
     {
@@ -1150,7 +1161,10 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Test your answer in this cell"
+        "# Test your answer in this cell\n",
+        "with open(\"resultats_ban.csv\", \"w\") as new_file:\n",
+        "    for row in new_file:\n",
+        "        \n"
       ]
     },
     {
@@ -1357,15 +1371,7 @@
       "path": "/Users/gblin/opt/anaconda3/share/jupyter/kernels/python3"
     },
     "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
       "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
       "version": "3.11.9"
     }
   },
